--- a/src/ses_inference.ipynb
+++ b/src/ses_inference.ipynb
@@ -689,7 +689,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PCA analysis"
+    "## Socio economic status (SES) inference using PCA analysis\n",
+    "This approach makes two major assumptions:\n",
+    "1. The variables used are reasonable proxies for SES\n",
+    "2. That the sample is representative of the SES spectrum\n",
+    "   - We use PCA on variables we believe are proxies of SES, and find lower dimensions of the data that maximises variance. The motivation is that if the variables are in fact proxies for SES, then we will see a latent structure in the PCA data."
    ]
   },
   {
