--- a/src/FairPCA.ipynb
+++ b/src/FairPCA.ipynb
@@ -1058,6 +1058,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Math"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grade threshold 10 (Passing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1289,6 +1305,14 @@
    ],
    "source": [
     "df_results[(df_results[\"Grade threshold\"] == 10) & (df_results[\"Course\"]==\"math\")]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grade threshold 13 (Eligble for higher education)"
    ]
   },
   {
@@ -1526,6 +1550,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Portuguese"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grade threshold 10 (Passing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1757,6 +1797,14 @@
    ],
    "source": [
     "df_results[(df_results[\"Grade threshold\"] == 10) & (df_results[\"Course\"]==\"portuguese\")]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grade threshold 13 (Eligble for higher education)"
    ]
   },
   {
