Added pickle file explainer

--- a/src/FairPCA.ipynb
+++ b/src/FairPCA.ipynb
@@ -1054,6 +1054,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pickle file is list of dicts with these key value pairs\n",
+    "\n",
+    "- name : experiment type name\n",
+    "- grade_threshold : Used to calculate target variable using G3. 10 or 13\n",
+    "- course : Course the student was taking\n",
+    "- model : The model used in the experiment\n",
+    "- performance_metrics : Dict containing accuracy, recall and f1 score\n",
+    "- fairness_metrics : DataFrame containing equalized odds metrics\n",
+    "- experiment_obect : The object used to perform the experiment. Contains all of the data and principal compontants if used for PCA. See Experiment class at the top of the notebook\n",
+    "- suppressed_variables : The proxy variables used in FairPCA as protected groups"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Results"
    ]
   },
