--- a/src/FairPCA.ipynb
+++ b/src/FairPCA.ipynb
@@ -967,7 +967,7 @@
     "\n",
     "- Baseline\n",
     "\n",
-    "Here we use all variables in the dataset except for G1, G2 and G3. G1 and G2 are discarded and G3 are the labels.\n",
+    "Here we use all variables in the dataset except for G1, G2 and G3. G1 and G2 are discarded and G3 used as labels using a grade threshold, which is either passing (10) or eligble for higher education (13).\n",
     "Categorical variables are onehot encoded, but ordinal variables are kept as is. \n",
     "This experiment outlines what kind of bias was seen in the original paper this dataset is from where they used these variables.\n",
     "\n",
