added levens and t-test to test for difference between groups

--- a/src/ses_inference.ipynb
+++ b/src/ses_inference.ipynb
@@ -564,6 +564,7 @@
     "import plotly.express as px\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from scipy.stats import ttest_ind, levene\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "plt.style.use(\"seaborn-whitegrid\")\n",
@@ -11105,64 +11106,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### t-test to substantiate diffence between SES groups"
+    "### Statistical tests to check if mean final grade across SES groups is statistically significant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = ['G3', 'SES']\n",
-    "df_math = df[df['course'] == 'math'][cols]\n",
-    "df_port = df[df['course'] == 'portuguese'][cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_math_upper = df_math[df_math['SES'] == 'middle/rich']\n",
-    "df_math_lower = df_math[df_math['SES'] == 'lower']\n",
-    "\n",
-    "df_port_upper = df_port[df_port['SES'] == 'middle/rich']\n",
-    "df_port_lower = df_port[df_port['SES'] == 'lower']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=3.302844981214936, pvalue=0.0010447794690114254)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=5.822166082337775, pvalue=9.149446342332715e-09)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Is difference in final grade math significant between SES groups: True (p: 0.0012114700738109492)\n",
+      "\n",
+      "Is difference in final grade port significant between SES groups: True (p: 1.3446705080355532e-08)\n",
+      "      \n"
+     ]
     }
    ],
    "source": [
-    "# conduct a t-test to check if the difference is statistically significant\n",
-    "from scipy.stats import ttest_ind\n",
+    "alpha = 0.05  # significance level\n",
     "\n",
-    "# If unequal_var is True (default), then a Welsh t-test is performed. Otherwise, a Student t-test is performed to compare the means of two independent samples.\n",
-    "display(ttest_ind(df_math_upper[\"G3\"], df_math_lower[\"G3\"], equal_var=True))\n",
-    "display(ttest_ind(df_port_upper[\"G3\"], df_port_lower[\"G3\"], equal_var=True))"
+    "cols = [\"G3\", \"SES\"]\n",
+    "df_math = df[df[\"course\"] == \"math\"][cols]\n",
+    "df_port = df[df[\"course\"] == \"portuguese\"][cols]\n",
+    "\n",
+    "df_math_upper = df_math[df_math[\"SES\"] == \"middle/rich\"][\"G3\"]\n",
+    "df_math_lower = df_math[df_math[\"SES\"] == \"lower\"][\"G3\"]\n",
+    "\n",
+    "df_port_upper = df_port[df_port[\"SES\"] == \"middle/rich\"][\"G3\"]\n",
+    "df_port_lower = df_port[df_port[\"SES\"] == \"lower\"][\"G3\"]\n",
+    "\n",
+    "# Levens test to test for difference in variance is significant\n",
+    "lev_math_significant = levene(df_math_upper, df_math_lower)[1] < alpha\n",
+    "lev_port_significant = levene(df_port_upper, df_port_lower)[1] < alpha\n",
+    "\n",
+    "# If equal_var is True, then a Welsh t-test is performed. Otherwise, a Student t-test is performed to compare the means of two independent samples.\n",
+    "t_math_significant = (\n",
+    "    ttest_ind(df_math_upper, df_math_lower, equal_var=lev_math_significant)[1] < alpha\n",
+    ")\n",
+    "t_port_significant = (\n",
+    "    ttest_ind(df_port_upper, df_port_lower, equal_var=lev_port_significant)[1] < alpha\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f\"\"\"\n",
+    "Is difference in final grade math significant between SES groups: {t_math_significant} (p: {ttest_ind(\n",
+    "    df_math_upper, df_math_lower, equal_var=lev_math_significant\n",
+    ")[1]})\n",
+    "\n",
+    "Is difference in final grade port significant between SES groups: {t_port_significant} (p: {ttest_ind(df_port_upper, df_port_lower, equal_var=lev_port_significant)[1]})\n",
+    "      \"\"\"\n",
+    ")"
    ]
   }
  ],
