updated plots, and more EDA

--- a/src/ses_inference.ipynb
+++ b/src/ses_inference.ipynb
@@ -11111,7 +11111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -11139,17 +11139,17 @@
     "df_port_upper = df_port[df_port[\"SES\"] == \"middle/rich\"][\"G3\"]\n",
     "df_port_lower = df_port[df_port[\"SES\"] == \"lower\"][\"G3\"]\n",
     "\n",
-    "# Levens test to test for difference in variance is significant\n",
-    "lev_math_significant = levene(df_math_upper, df_math_lower)[1] < alpha\n",
-    "lev_port_significant = levene(df_port_upper, df_port_lower)[1] < alpha\n",
+    "# Levens test to test for difference in final grade variance between SES groups is significant in both math and portuguese:\n",
+    "lev_math_s, lev_math_p = levene(df_math_upper, df_math_lower)\n",
+    "lev_port_s, lev_port_p = levene(df_port_upper, df_port_lower)\n",
     "\n",
-    "# If equal_var is True, then a Welsh t-test is performed. Otherwise, a Student t-test is performed to compare the means of two independent samples.\n",
-    "t_math_significant = (\n",
-    "    ttest_ind(df_math_upper, df_math_lower, equal_var=lev_math_significant)[1] < alpha\n",
-    ")\n",
-    "t_port_significant = (\n",
-    "    ttest_ind(df_port_upper, df_port_lower, equal_var=lev_port_significant)[1] < alpha\n",
-    ")\n",
+    "math_var_diff = lev_math_p > alpha\n",
+    "port_var_diff = lev_port_p > alpha\n",
+    "# if True, then the variance is not significantly different between the two groups\n",
+    "\n",
+    "# If equal_var is set to True (lev_test is not significant), then a Welch t-test is performed. Otherwise, a Student t-test is performed to compare the means of two independent samples.\n",
+    "t_math_s, t_math_p = ttest_ind(df_math_upper, df_math_lower, equal_var=math_var_diff)\n",
+    "t_port_s, t_port_p = ttest_ind(df_port_upper, df_port_lower, equal_var=port_var_diff)\n",
     "\n",
     "print(\n",
     "    f\"\"\"\n",
@@ -11160,6 +11160,44 @@
     "Is difference in final grade port significant between SES groups: {t_port_significant} (p: {ttest_ind(df_port_upper, df_port_lower, equal_var=lev_port_significant)[1]})\n",
     "      \"\"\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrr}\n",
+      "\\toprule\n",
+      " & p-value & Significant \\\\\n",
+      "\\midrule\n",
+      "Levene test mathematics & 0.895100 & False \\\\\n",
+      "Levene test portuguese & 0.777156 & False \\\\\n",
+      "Student t-test mathematics & 0.001045 & True \\\\\n",
+      "Student t-test portuguese & 0.000000 & True \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats_test_results = pd.DataFrame.from_dict(\n",
+    "    {\n",
+    "        \"Levene test mathematics\": [lev_math_significant, lev_math_p],\n",
+    "        \"Levene test portuguese\": [lev_port_significant, lev_port_p],\n",
+    "        \"Student t-test mathematics\": [t_math_significant, t_math_p],\n",
+    "        \"Student t-test portuguese\": [t_port_significant, t_port_p],\n",
+    "    },\n",
+    "    orient=\"index\",\n",
+    "    columns=[\"Significant\", \"p-value\"],\n",
+    ")[[\"p-value\", \"Significant\"]]\n",
+    "\n",
+    "print(stats_test_results.to_latex())"
    ]
   }
  ],
